--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!-- <script src="//code.jivosite.com/widget/Yk71fAB3me" async></script> -->
+    <script src="//code.jivosite.com/widget/Yk71fAB3me" async></script>
   </body>
 </html>
